# oeselect

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.h  pyproject.toml  pyrightconfig.json  tasks.py  vrzn.toml
.github/workflows/: build-wheels.yml
cmake/: FindOpenEye.cmake
docs/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
docs/developer-guide/: cicd.rst
docs/getting-started/: installation.rst  quickstart.rst
docs/python-lib/: index.rst
include/oeselect/: Context.h  CustomPredicates.h  Error.h  Parser.h  Predicate.h  ResidueSelector.h  Selection.h  Selector.h  SpatialIndex.h  Tagger.h  oeselect.h
include/oeselect/predicates/: AtomPropertyPredicates.h  AtomTypePredicates.h  ComponentPredicates.h  DistancePredicates.h  ExpansionPredicates.h  LogicalPredicates.h  NamePredicate.h  SecondaryStructurePredicates.h
metapackage/: README.md  pyproject.toml  setup.py
metapackage/src/oeselect/: __init__.py
python/: pyproject.toml
python/oeselect/: __init__.py  oeselect.py
python/oeselect_lib/: __init__.py  oeselect.py
scripts/: build_python.py  version.py
src/: Context.cpp  CustomPredicates.cpp  Parser.cpp  Predicate.cpp  ResidueSelector.cpp  Selection.cpp  Selector.cpp  SpatialIndex.cpp  Tagger.cpp  glob_match.h
swig/: CMakeLists.txt  oeselect.i
tests/: CMakeLists.txt
tests/assets/: 9Q03.cif
tests/cpp/: CMakeLists.txt  test_glob_match.cpp  test_main.cpp  test_selection.cpp  test_spatial_index.cpp
tests/python/: test_build_python.py  test_oeselect.py  test_package_imports.py
