[build-system]
requires = ["scikit-build-core>=0.8", "swig>=4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "oeselect"
version = "1.3.3"
description = "High-performance PyMOL selection language for OpenEye Toolkits"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["chemistry", "molecular selection", "pymol", "openeye", "cheminformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["openeye-toolkits>=2025.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "vrzn>=0.1.0"]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
build.targets = ["oeselect_python"]
build-dir = "build/{wheel_tag}"
wheel.install-dir = "."
wheel.py-api = "cp310"
wheel.exclude = ["**.pyc", "**/__pycache__", "*.a", "CMakeFiles/**"]
logging.level = "INFO"
strict-config = false

[tool.scikit-build.cmake.define]
OESELECT_BUILD_TESTS = "OFF"
OESELECT_BUILD_PYTHON = "ON"
OPENEYE_USE_SHARED = "ON"
OESELECT_USE_STABLE_ABI = "ON"
OESELECT_UNIVERSAL2 = "OFF"

# =============================================================================
# TOML-driven build configuration for scripts/build_python.py
# =============================================================================
# This section is read by build_python.py to parameterize the build.
# The script itself is identical across all projects — only this config changes.
[tool.oe-build]
package-name = "oeselect"
cmake-test-flag = "OESELECT_BUILD_TESTS"
rpath-strategy = "platform"  # "platform" = @loader_path/../openeye/libs/{platform}, "simple" = @loader_path

# OpenEye libraries that are expected to be missing from delocate
# (they are provided at runtime by openeye-toolkits, not bundled in the wheel)
expected-missing-libs = [
    "liboechem", "liboesystem", "liboeplatform",
    "liboemath", "libzstd",
]

# Additional CMake defines passed during wheel build (beyond the standard ones)
[tool.oe-build.extra-cmake-defines]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v"
