[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeselect"
version = "1.0.0"
description = "PyMOL-style selection language for OpenEye Toolkits"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

# Dependencies are computed dynamically based on installed openeye-toolkits version
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/yourusername/oeselect"

[tool.setuptools.packages.find]
where = ["src"]
