[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oeselect"
version = "1.1.1"
description = "High-performance PyMOL selection language for OpenEye Toolkits"
requires-python = ">=3.10"
dependencies = ["openeye-toolkits>=2025.2"]

[tool.setuptools]
packages = ["oeselect"]
